# llm-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: tokenization.md
examples/: custom_provider.py
integration_tests/: pyproject.toml
integration_tests/tests/: conftest.py  test_dry_run.py  test_image_e2e.py  test_tokenizer_live.py
scripts/: check_per_file_coverage.py
src/llm_gateway/: __init__.py  client.py  config.py  cost.py  registry.py  testing.py  tokenizer.py
src/llm_gateway/providers/: anthropic.py  base.py  gemini.py  gemini_image.py  local_claude.py
src/llm_gateway/tokenizers/: anthropic_tokenizer.py  gemini_tokenizer.py  heuristic_tokenizer.py
tests/: conftest.py
tests/unit/: test_client.py  test_client_count_tokens.py  test_config.py  test_image_cost.py  test_registry.py  test_testing.py  test_tokenizer_registry.py  test_tracing.py
tests/unit/providers/: test_anthropic.py  test_gemini.py  test_gemini_image.py  test_local_claude.py
tests/unit/tokenizers/: test_anthropic_tokenizer.py  test_gemini_tokenizer.py  test_heuristic.py
